# MPC-RL_for_AVs

./: .gitignore  README.md  main.py  mpc_agent.py  pyproject.toml  requirements.txt  run_pure_mpc_NO_collison_avoidance.py  run_pure_mpc_agent.py  run_pure_mpc_collison_avoidance.py  run_pure_mpc_linear.py  setup.py  test_mpcrl__a2c_v0.py  test_mpcrl_v0.py  test_mpcrl_v1.py  test_ppo.py  test_traj.py  train_mpcrl_a2c_v0.py  train_mpcrl_agent.py  train_mpcrl_v0.py  train_mpcrl_v0_custom.py  train_mpcrl_v1.py  train_ppo.py  utils.py
agents/: a2c_mpc.py  agent.py  base.py  base_agent.py  mpcrl_agent.py  ppo_agent.py  ppo_mpc.py  pure_mpc.py  pure_mpc_agent.py  pure_mpc_agent_Gozde.py  pure_mpc_gozde.py  pure_mpc_linear.py  pure_mpc_no_collision.py  pure_mpc_saeed.py  utils.py
agents/archive/: pure_mpc.py  pure_mpc_saeed.py
agents/deprecated/: base_agent.py
config/: cfg.yaml  config.py
custom_models/: __init__.py  custom_features_extractor.py  custom_policy.py  observation_wrapper.py  training_callback.py
envs/: intersection_env (Simple reward with mannual vehicles).py  intersection_env (modified-multi-agent reward).py  intersection_env (original).py  intersection_env_Feb2025_v1.py  intersection_env__.py  intersection_env_for_gavin.py  intersection_env_ubuntuJan2025.py
example/: test_sb3.py  test_traj.py
main/: model_comparison  model_comparison.py  run_pure_mpc.py
main/test_functionality/: test_sb3.py  test_traj.py
mpcrl/: __init__.py
saved_metrics/: training_metrics.npy
trainers/: RL_trainers.py  mpcrl.py  trainer.py  trainer_utils.py  utils.py
(+5 files in other folders)
