[build-system]
requires = ["setuptools>=64.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mpcrl"
version = "0.1.0"
description = "A brief description of your Python package"
authors = [
    { name = "Zhenlin (Gavin) Xu", email = "gavinxu66@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.12"

# [project.urls]
# "Homepage" = "https://github.com/yourusername/your-repo"
# "Bug Tracker" = "https://github.com/yourusername/your-repo/issues"
dependencies = [
    "gymnasium>=1.0.0a2",
    "numpy>=2.1.1",  # Updated to allow compatible future versions
    "highway-env>=1.10.1"
]